// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtraPermissionsSection render empty section 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="root"
    >
      <button
        class="header"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-right fa-w-10 activeIndicator active"
          data-icon="chevron-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
            fill="currentColor"
          />
        </svg>
        Advanced: Extra Permissions
      </button>
      <div
        class="body collapse show"
      >
        <div
          class="formGroup form-group row"
        >
          <label
            class="label form-label col-form-label col-xl-2 col-lg-3"
            for="permissions.origins"
          >
            Sites/APIs
          </label>
          <div
            class="col-xl-10 col-lg-9"
          >
            <div
              class="small"
            >
              <span>
                Shortcuts:
              </span>
              <button
                class="root ml-2 btn btn-link"
                type="button"
              >
                Site
              </button>
              <button
                class="root ml-2 btn btn-link"
                type="button"
              >
                Domain
              </button>
              <button
                class="root ml-2 btn btn-link"
                type="button"
              >
                HTTPS
              </button>
              <button
                class="root ml-2 btn btn-link"
                type="button"
              >
                All URLs
              </button>
            </div>
            <ul
              class="list-group mb-2"
            />
            <button
              class="addButton btn btn-link"
              type="button"
            >
              Add Allowed Origin
            </button>
            <small
              class="text-muted form-text"
            >
              <div>
                URL match patterns permitting the starter brick to run on a site or call an API. Provide URL match patterns here if the starter brick either 1) calls an API without using an Integration, or 2) performs actions on a target tab not included in the site match patterns
              </div>
            </small>
          </div>
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`ExtraPermissionsSection render populated section 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="root"
    >
      <button
        class="header"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-right fa-w-10 activeIndicator active"
          data-icon="chevron-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
            fill="currentColor"
          />
        </svg>
        Advanced: Extra Permissions
      </button>
      <div
        class="body collapse show"
      >
        <div
          class="formGroup form-group row"
        >
          <label
            class="label form-label col-form-label col-xl-2 col-lg-3"
            for="permissions.origins"
          >
            Sites/APIs
          </label>
          <div
            class="col-xl-10 col-lg-9"
          >
            <div
              class="small"
            >
              <span>
                Shortcuts:
              </span>
              <button
                class="root ml-2 btn btn-link"
                type="button"
              >
                Site
              </button>
              <button
                class="root ml-2 btn btn-link"
                type="button"
              >
                Domain
              </button>
              <button
                class="root ml-2 btn btn-link"
                type="button"
              >
                HTTPS
              </button>
              <button
                class="root ml-2 btn btn-link"
                type="button"
              >
                All URLs
              </button>
            </div>
            <ul
              class="list-group mb-2"
            >
              <li
                class="list-group-item py-1"
              >
                <div
                  class="formGroup mb-0 form-group row"
                >
                  <div
                    class="col-xl-12 col-lg-12"
                  >
                    <div
                      class="root"
                    >
                      <div
                        class="field"
                      >
                        <textarea
                          class="form-control"
                          id="permissions.origins.0"
                          name="permissions.origins.0"
                          rows="1"
                        >
                          http://web.archive.org/web/20150905193945/http://www.hamsterdance.com/
                        </textarea>
                      </div>
                      <div
                        class="dropdown dropdown"
                        data-test-selected="Text"
                        data-testid="toggle-permissions.origins.0"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="true"
                          class="dropdown-toggle btn btn-link"
                          type="button"
                        >
                          <span
                            class="symbol"
                          >
                            <test-file-stub
                              classname="root"
                            />
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
            <button
              class="addButton btn btn-link"
              type="button"
            >
              Add Allowed Origin
            </button>
            <small
              class="text-muted form-text"
            >
              <div>
                URL match patterns permitting the starter brick to run on a site or call an API. Provide URL match patterns here if the starter brick either 1) calls an API without using an Integration, or 2) performs actions on a target tab not included in the site match patterns
              </div>
            </small>
          </div>
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
